--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jsx-control-statements": "^3.2.8",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "2.0.0-next.66cc7a90"
+    "react-scripts": "2.0.0-next.66cc7a90",
+    "styled-components": "^3.2.6"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "browserslist": {
@@ -25,5 +27,20 @@
       "Firefox ESR",
       "not ie < 11"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.0.0-beta.46",
+    "@types/jest": "^22.2.3",
+    "@types/react": "^16.3.13",
+    "@types/react-dom": "^16.0.5",
+    "react-app-rewire-hot-loader": "^1.0.1",
+    "react-app-rewire-styled-components": "^3.0.2",
+    "react-app-rewire-typescript-babel-preset": "^2.1.1",
+    "react-app-rewired": "^2.0.0",
+    "react-hot-loader": "^4.1.3",
+    "tslint": "^5.10.0",
+    "tslint-config-prettier": "^1.12.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^2.8.3"
   }
 }
