--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-cache-inmemory": "^1.2.1",
+    "apollo-client": "^2.3.1",
+    "apollo-link-http": "^1.5.4",
+    "apollo-link-schema": "^1.1.0",
+    "graphql": "0.13.0",
+    "graphql-tag": "^2.9.2",
+    "graphql-tools": "^3.0.1",
     "jsx-control-statements": "^3.2.8",
     "react": "^16.3.2",
+    "react-apollo": "^2.1.4",
     "react-dom": "^16.3.2",
+    "react-hot-loader": "^4.1.3",
     "react-scripts": "2.0.0-next.66cc7a90",
     "styled-components": "^3.2.6"
   },
@@ -29,15 +38,18 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "7.0.0-beta.47",
     "@babel/preset-typescript": "^7.0.0-beta.46",
+    "@playlyfe/gql": "^2.6.0",
     "@types/jest": "^22.2.3",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
+    "jest-transform-graphql": "^2.1.0",
+    "react-app-rewire-graphql-tag": "^1.1.0",
     "react-app-rewire-hot-loader": "^1.0.1",
     "react-app-rewire-styled-components": "^3.0.2",
     "react-app-rewire-typescript-babel-preset": "^2.1.1",
     "react-app-rewired": "^2.0.0",
-    "react-hot-loader": "^4.1.3",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.12.0",
     "tslint-react": "^3.6.0",
