--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsx-control-statements": "^3.2.8",
     "react": "^16.3.2",
     "react-apollo": "^2.1.4",
+    "react-app-rewire-typescript-babel-with-apollo-preset": "^2.1.3",
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.1.3",
     "react-scripts": "2.0.0-next.66cc7a90",
@@ -22,7 +23,8 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "clear": "jest --clearCache"
   },
   "browserslist": {
     "development": [
@@ -45,10 +47,8 @@
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
     "jest-transform-graphql": "^2.1.0",
-    "react-app-rewire-graphql-tag": "^1.1.0",
     "react-app-rewire-hot-loader": "^1.0.1",
     "react-app-rewire-styled-components": "^3.0.2",
-    "react-app-rewire-typescript-babel-preset": "^2.1.1",
     "react-app-rewired": "^2.0.0",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.12.0",
