--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,3 @@
 {
-  "plugins": ["module:jsx-control-statements"]
+  "plugins": ["module:jsx-control-statements", "babel-plugin-styled-components"]
 }
