--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.1.3",
     "react-scripts": "2.0.0-next.66cc7a90",
-    "styled-components": "^3.2.6"
+    "styled-components": "^3.2.6",
+    "react-test-renderer": "^16.3.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -27,17 +28,8 @@
     "clear": "jest --clearCache"
   },
   "browserslist": {
-    "development": [
-      "last 2 chrome versions",
-      "last 2 firefox versions",
-      "last 2 edge versions"
-    ],
-    "production": [
-      ">1%",
-      "last 4 versions",
-      "Firefox ESR",
-      "not ie < 11"
-    ]
+    "development": ["last 2 chrome versions", "last 2 firefox versions", "last 2 edge versions"],
+    "production": [">1%", "last 4 versions", "Firefox ESR", "not ie < 11"]
   },
   "devDependencies": {
     "@babel/core": "7.0.0-beta.47",
@@ -46,6 +38,7 @@
     "@types/jest": "^22.2.3",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
+    "@types/react-test-renderer": "^16.0.1",
     "jest-transform-graphql": "^2.1.0",
     "react-app-rewire-hot-loader": "^1.0.1",
     "react-app-rewire-styled-components": "^3.0.2",
