--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.1.3",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "2.0.0-next.66cc7a90",
+    "react-scripts": "^2.0.0-next.66cc7a90",
     "react-test-renderer": "^16.3.2",
+    "semantic-ui-css": "^2.3.1",
+    "semantic-ui-react": "^0.80.0",
     "styled-components": "^3.2.6"
   },
   "scripts": {
@@ -29,20 +31,10 @@
     "clear": "jest --clearCache"
   },
   "browserslist": {
-    "development": [
-      "last 2 chrome versions",
-      "last 2 firefox versions",
-      "last 2 edge versions"
-    ],
-    "production": [
-      ">1%",
-      "last 4 versions",
-      "Firefox ESR",
-      "not ie < 11"
-    ]
+    "development": ["last 2 chrome versions", "last 2 firefox versions", "last 2 edge versions"],
+    "production": [">1%", "last 4 versions", "Firefox ESR", "not ie < 11"]
   },
   "devDependencies": {
-    "@babel/core": "7.0.0-beta.47",
     "@babel/preset-typescript": "^7.0.0-beta.46",
     "@playlyfe/gql": "^2.6.0",
     "@types/jest": "^22.2.3",
